--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,7 @@ android {
 dependencies {
     def retrofitVersion = '2.4.0'
     def lifecycle_version = "1.1.1"
+    def supportVersion = "28.0.0"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
@@ -38,4 +39,16 @@ dependencies {
     // ViewModel and LiveData
     implementation "android.arch.lifecycle:extensions:$lifecycle_version"
 
+    // CardViews
+    implementation "com.android.support:cardview-v7:$supportVersion"
+
+    // RecyclerViews
+    implementation "com.android.support:recyclerview-v7:$supportVersion"
+
+    // Glide
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
 }
+
+
+
