--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.codingwithmitch.restapimvvm"
+        applicationId "com.codingwithmitch.foodrecipes"
         minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
@@ -13,46 +13,48 @@ android {
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
 }
 
 dependencies {
-    def archLifecycleVersion = '1.1.1'
-    def glideVersion = '4.8.0'
     def retrofitVersion = '2.4.0'
-    def supportVersion = '28.0.0'
+    def lifecycle_version = "1.1.1"
+    def supportVersion = "28.0.0"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "com.android.support:appcompat-v7:$supportVersion"
+    implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
-    //RecyclerView
-    implementation "com.android.support:recyclerview-v7:$supportVersion"
-
-    // CardView
-    implementation "com.android.support:cardview-v7:$supportVersion"
-
-    // design
-    implementation "com.android.support:design:$supportVersion"
-
-    //Retrofit (for making http requests)
+    //retrofit
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
-    //retrofit gson lib (For reading response from server)
+
+    // Retrofit gson converter
     implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
 
-    // Lifecycle components
-    implementation "android.arch.lifecycle:extensions:$archLifecycleVersion"
-    annotationProcessor "android.arch.lifecycle:compiler:$archLifecycleVersion"
+    // ViewModel and LiveData
+    implementation "android.arch.lifecycle:extensions:$lifecycle_version"
+
+    // CardViews
+    implementation "com.android.support:cardview-v7:$supportVersion"
+
+    // RecyclerViews
+    implementation "com.android.support:recyclerview-v7:$supportVersion"
+
+    // Design SUpport
+    implementation "com.android.support:design:$supportVersion"
 
     // Glide
-    implementation "com.github.bumptech.glide:glide:$glideVersion"
-    annotationProcessor "com.github.bumptech.glide:compiler:$glideVersion"
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
 
-    // circle image view
-    implementation 'de.hdodenhof:circleimageview:2.2.0'
+    // Circle ImageView
+    implementation 'de.hdodenhof:circleimageview:3.0.0'
 }
+
+
+
