--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,7 @@ dependencies {
     def retrofitVersion = '2.4.0'
     def lifecycle_version = "1.1.1"
     def supportVersion = "28.0.0"
+    def glideVersion = "4.8.0"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
@@ -29,6 +30,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
 
     //retrofit
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
@@ -45,16 +47,13 @@ dependencies {
     // RecyclerViews
     implementation "com.android.support:recyclerview-v7:$supportVersion"
 
-    // Design SUpport
+    // Design Support
     implementation "com.android.support:design:$supportVersion"
 
     // Glide
-    implementation 'com.github.bumptech.glide:glide:4.8.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+    implementation "com.github.bumptech.glide:glide:$glideVersion"
+    annotationProcessor "com.github.bumptech.glide:compiler:$glideVersion"
 
     // Circle ImageView
     implementation 'de.hdodenhof:circleimageview:3.0.0'
 }
-
-
-
