--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,30 +19,27 @@ android {
 }
 
 dependencies {
-    def retrofitVersion = '2.4.0'
+    def retrofitVersion = "2.5.0"
     def lifecycle_version = "1.1.1"
     def supportVersion = "28.0.0"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation "com.android.support:appcompat-v7:$supportVersion"
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
-
-    //retrofit
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
 
-    // Retrofit gson converter
     implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
 
     // ViewModel and LiveData
     implementation "android.arch.lifecycle:extensions:$lifecycle_version"
 
-    // CardViews
+    // Cardview
     implementation "com.android.support:cardview-v7:$supportVersion"
 
-    // RecyclerViews
+    // Recyclerview
     implementation "com.android.support:recyclerview-v7:$supportVersion"
 }
