--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     def lifecycle_version = "1.1.1"
     def supportVersion = "28.0.0"
     def glideVersion = "4.8.0"
+    def paging_version = "1.0.0"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "com.android.support:appcompat-v7:$supportVersion"
@@ -41,8 +42,13 @@ dependencies {
 
     implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
 
+    implementation 'com.squareup.okhttp:okhttp:2.7.5'
+
     // ViewModel and LiveData
     implementation "android.arch.lifecycle:extensions:$lifecycle_version"
+
+    // Paging Library
+    implementation "android.arch.paging:runtime:$paging_version"
 
     // Cardview
     implementation "com.android.support:cardview-v7:$supportVersion"
